# guidolib

./: .gitignore  .gitmodules  .travis.yml  404.html  Acknowledgments.txt  CNAME  ChangeLogSB.rtf  Makefile  changelog.txt  features-requests.txt  index.html  lazy-android-setup.py  makeRelease.txt  readme.md  readme.txt  sitemap.xml  version  version.txt
Max/: changelog.txt  guido-Info.plist  guido.cpp  ignore.txt
PureData/: ignore.txt  musicxml.cpp
Qt/: .gitignore  .qmake.cache  .qmake.stash  GUIDOEngineLink.pri  GuidoQt.dsw  GuidoQt.sln  GuidoQtAll.pro  Makefile  ignore.txt
android/: AndroidManifest.xml  README  build.xml  local.properties
android-apps/: README  build-android-cairo.py  cpu-features.h
cmake/: CMakeLists.txt  Makefile  ignore.txt  runcmake
cmake/GUIDOEngine.framework/: GUIDOEngine
cmake/GUIDOEngine.framework/Versions/C/: GUIDOEngine
cmake/GUIDOEngine.framework/Versions/C/Headers/: GDeviceOSX.h  GDisplayDeviceOSX.h  GFontOSX.h  GMemoryDeviceOSX.h  GSystemOSX.h  GUIDOScoreMap.h  GuidoFeedback.h  MusicalSymbols.h  SVGDevice.h  TRect.h  VGColor.h  VGDevice.h  VGSystem.h
cmake/GUIDOEngine.framework/Versions/C/Resources/: Info.plist
css/: base.css
doc/: .gitignore  GUIDO_Additional_Specifications_1.3.8.rtf  GUIDO_Additional_Specifications_1.6.5.md  additional-specifications.txt  changes_trill line.txt  graphicdevices.txt  key-extension.txt  readme.md  tag-parameters-list.txt
environments/Qt/apps/: CMakeLists.txt  GUIDOEngine.shared  Make.shared  Makefile
environments/Qt/apps/GuidoEditor/: CodeEditor.cpp  GuidoEditor.pro  GuidoEditorConfig.cmake  GuidoHighlighter.cpp  MainWindow.cpp  MainWindow.h  MusicNotationHighlighter.cpp  QFindWidget.cpp  SetupDialog.cpp  SetupDialog.h  changelog.txt  main.cpp
environments/Qt/apps/GuidoEditor/QFindWidget/: QFindWidget.cpp  findwidget.ui
environments/Qt/apps/GuidoEditor/SetupDialog/: SetupDialog.cpp  SetupDialog.h
environments/Qt/apps/GuidoEditor/rsc/: GuidoEditor.rc  GuidoEditorInfo.plist  application.qrc  resource.h  setupDialog.ui
environments/Qt/apps/GuidoEditor/rsc/English.lproj/: InfoPlist.strings
environments/Qt/apps/GuidoEditor/src/: CodeEditor.cpp  MainWindow.cpp  MainWindow.h  MusicNotationHighlighter.cpp  main.cpp
environments/Qt/apps/GuidoSceneComposer/: GuidoSceneComposer.pro  GuidoSceneComposerConfig.cmake  changelog.txt
environments/Qt/apps/GuidoSceneComposer/rsc/: GuidoCommands.xml  GuidoSceneComposer.rc  GuidoSceneComposerInfo.plist  resource.h
environments/Qt/apps/GuidoSceneComposer/rsc/English.lproj/: InfoPlist.strings
environments/Qt/apps/GuidoSceneComposer/src/: main.cpp
environments/Qt/apps/GuidoSceneComposer/src/GUI/: MainWindow.cpp  MainWindow.h
environments/Qt/apps/GuidoSceneComposer/src/GuidoItemContainer/: QGuidoItemContainer.cpp  QGuidoItemContainer.h  QGuidoItemContainerFactory.cpp  QGuidoItemContainerFactory.h  QSimpleItemContainer.h
environments/Qt/apps/guido2image/: Guido2ImageConfig.cmake  Makefile  XGetopt.cpp  changelog.txt  guido2image.pro  main.cpp
environments/Qt/libs/: CMakeLists.txt  Make.shared  Makefile
environments/Qt/libs/GraphicsSceneMainWindow/: GRAPHICSCENEConfig.cmake  GraphicsSceneMainWindow.pro
environments/Qt/libs/GraphicsSceneMainWindow/include/: MusicNotationHighlighter.h  QItemResizer.h  QLanguageItemFactory.h  QPaletteItem.h  QResolutionDialog.h  QSwitcher.h
environments/Qt/libs/GraphicsSceneMainWindow/src/GUI/: GraphicsSceneMainWindow.cpp  MainWindowObjects.cpp  QResolutionDialog.cpp
environments/Qt/libs/GraphicsSceneMainWindow/src/GraphicsItem/: QLanguageItem.cpp  QPaletteItem.cpp
environments/Qt/libs/GraphicsSceneMainWindow/src/LanguageCommandPalette/: QLanguageCommandPalette.h  QLanguageCommandPaletteLayout.cpp  QLanguageCommandPaletteLayout.h
environments/Qt/libs/GraphicsSceneMainWindow/src/SyntaxHighlighter/: MusicNotationHighlighter.cpp
environments/Qt/libs/GuidoQt/: GDeviceQt.cpp  GFontQt.cpp  GSystemQt.cpp  Guido2Image.cpp  GuidoQt.pro  GuidoQtConfig.cmake  QGuidoGraphicsItem.cpp  QGuidoImporter.cpp  QGuidoPainter.cpp  QGuidoWidget.cpp  QPRollGraphicsItem.cpp  QPageManager.cpp
environments/Qt/libs/GuidoQt/include/: GDeviceQt.h  GFontQt.h  GSystemQt.h  Guido2Image.h  QGuidoGraphicsItem.h  QGuidoImporter.h  QGuidoPainter.h  QPRollGraphicsItem.h
environments/Qt/tools/: CMakeLists.txt  Make.shared  Makefile
environments/Qt/tools/BravuraFontMetrics/: bravurafontmetrics.pro  main.cpp
environments/Qt/tools/BravuraFontViewer/: QFontDisplayer.cpp  QFontDisplayer.h  main.cpp  readme.txt
environments/Qt/tools/FontMetrics/: fontmetrics.pro  main.cpp
environments/Qt/tools/GuidoFontMetrics/: guidofontmetrics.pro  main.cpp
environments/Qt/tools/GuidoQtFontViewer/: GuidoQtFontViewer.pro  QFontDisplayer.cpp  main.cpp
environments/opengl/applications/GuidoOpenGL/: CMakeLists.txt  GuidoDoc.cpp  GuidoDoc.h  GuidoViewerApp.cpp  GuidoViewerApp.h  main.cpp  readme.txt
java/: .gitignore  Makefile  changelog.txt  factorysample.java  guidoviewer.java  ignore.txt  version
javadoc/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
javascript/: .gitignore  Makefile  canvas.html  canvasDevice.html  canvasSvg.html  changelog.txt  classSvg.html  guido.html  guidoEmscriptenBridge.js  readme.txt  webComponent.html
jsdoc/: index.html  jsdoc.css
lang/java/cmake/: CMakeLists.txt
linux/server/: CMakeLists.txt  cairo_guido2img.cpp  cairo_guido2img.h  engine.cpp  guido2img.cpp  guido2img.h
macosx/: GUIDOEngine-Info.plist  makefile  readme.txt
misc/: Acknowledgments.txt  Guido.plist  README.html  features-requests.txt  todo.txt
open-issues/: bug-triplets.gmn  collisions.gmn  crash-mod.gmn  g-issue104.gmn  g-issue105.gmn  g-issue13.gmn  (+57 more)
opengl/applications/GuidoOpenGL/: CMakeLists.txt  GuidoDoc.cpp  GuidoDoc.h  GuidoViewerApp.cpp  GuidoViewerApp.h  Makefile  main.cpp
python/cmake/: CMakeLists.txt
tools/cmake/: CMakeLists.txt
(+13602 files in other folders)
